frontend/test/should_fail/array_map_index_match.grg
test array_map(ref a:array<int>) {
	if {
		a.map<int>{idx:match<array_map> -> value:int -> value}.empty();
	}	
}
